# streamrag

./: .gitignore  PLANNING.md  README.md  TASK.md  main.py  pyproject.toml  requirements.txt
.github/instructions/: rag-project-rules.instructions.md
.github/prompts/: rag-project-prompt.prompt.md
config/: ENV.sample
docs/: PROJECT_STRUCTURE.md  SETUP.md  links.md
scripts/: debug_env_supabase.py  try_agent.py
sql/: setup_database.sql
src/: app_streamlit.py  env.py  fastapi_app.py
src/agent/: agent.py  compose_answer.py  kb.py  response_templates.py
src/core/: __init__.py
src/core/agent/: agent.py  kb.py  response_templates.py
src/core/ingestion/: embeddings.py  ingest.py  pdf_text.py  supabase_store.py
src/ingestion/: chunking.py  embeddings.py  ingest.py  pdf_text.py  supabase_store.py
src/ui/: app_streamlit.py
tests/: test_chunking.py  test_chunking_overlap.py  test_compose_answer.py
