[project]
name = "rag-vs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.4",
    "dotenv>=0.9.9",
    "fastapi>=0.111",
    "httpx>=0.27",
    "numpy>=1.24.0",
    "openai>=1.40",
    "pgvector>=0.2.5",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "pydantic-ai>=0.0.14",
    "pypdf>=4.0.0",
    "pytest>=8.2",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "supabase>=2.6.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
